First commit by davide

--- a/examples/wireless/lan80211/omnetpp.ini
+++ b/examples/wireless/lan80211/omnetpp.ini
@@ -31,6 +31,7 @@ tkenv-plugin-path = ../../../etc/plugins
 *.host[*].pingApp[0].sendInterval = 10ms
 
 # nic settings
+#**.wlan*.bitrate = 2Mbps
 **.wlan*.bitrate = 2Mbps
 
 **.mac.address = "auto"
