second commit from Ion

--- a/examples/wireless/lan80211/omnetpp.ini
+++ b/examples/wireless/lan80211/omnetpp.ini
@@ -32,6 +32,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 #**.wlan*.bitrate = 2Mbps
+#**.wlan*.bitrate = 2Mbps
 **.wlan*.bitrate = 2Mbps
 
 **.mac.address = "auto"
