added new FSM for ReCo...

--- a/examples/wireless/lan80211/omnetpp-streaming.ini
+++ b/examples/wireless/lan80211/omnetpp-streaming.ini
@@ -2,6 +2,7 @@
 #debug-on-errors = true
 network = Lan80211
 tkenv-plugin-path = ../../../etc/plugins
+sim-time-limit = 10s
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -42,16 +43,24 @@ tkenv-plugin-path = ../../../etc/plugins
 #**.pingApp[0].destAddr = "host[0]"
 #**.pingApp[0].printPing = true
 
+**.opMode = "g"
+
 # nic settings
-**.wlan*.bitrate = 2Mbps
+**.wlan*.bitrate = 54Mbps#2Mbps
+**.wlan[*].mac.basicBitrate = 6Mbps
+**.wlan[*].mac.slotTime = 9us
+**.sifsTime = 16us
+**.preambleDuration = 16us
 
 **.mac.address = "auto"
 **.mac.maxQueueSize = 14
 **.mac.rtsThresholdBytes = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.cwMinData = 15#7
+**.wlan[*].mac.cwMaxData = 1023#7
 **.wlan[*].mac.cwMinBroadcast = 31
 
+**.controlBitrate = 6Mbps
 **.wlan[*].radio.transmitter.power = 20mW
 **.wlan[*].radio.transmitter.bitrate = 2Mbps
 **.wlan[*].radio.transmitter.headerBitLength = 100b
@@ -74,7 +83,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 [Config Streaming1]
 description = "video stream"
-*.numHosts = 3
+*.numHosts = 2
 
 [Config Streaming2] # __interactive__
 description = "n hosts"
